--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "xss-clean": "^0.1.1"
+    "swagger-ui-express": "^4.6.0",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "husky": "^8.0.1",
